--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^2.4.3",
     "jose": "^5.6.3",
-    "next": "14.2.5",
+    "next": "^14.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.23.8"
